--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -14,7 +14,7 @@
 				   md-no-ink="isAndroid"
 				   ng-click="vm.navigateToLogin()">ACESSE SUA CONTA
 		</md-button>
-
+		<a class="anonymous-access" ng-click="vm.anonymousLogin()">ACESSE COMO VISITANTE</a>
 	</ion-content>
 	<!--end login content section-->
 </ion-view>
