--- a/src/components/news/detail/news-detail.component.html
+++ b/src/components/news/detail/news-detail.component.html
@@ -4,7 +4,7 @@
 		<span ng-if="!vm.news">Notícias</span>
 	</ion-nav-title>
 	<ion-nav-buttons side="left">
-		<a ng-click="$ionicGoBack()" class="button back-button buttons button-clear header-item nav-back-btn">
+		<a ng-click="$transitionService.goBack()" class="button back-button buttons button-clear header-item nav-back-btn">
 			<i class="ion-android-arrow-back"></i>
 		</a>
 	</ion-nav-buttons>
