refactor(layout): Organiza tela de alerta de acesso
Renomeia SignUp para SecureWarning, altera o local da pasta para dentro de layout

--- a/src/components/layout/secure-warning/secure-warning.component.css
+++ b/src/components/layout/secure-warning/secure-warning.component.css
@@ -1,13 +1,13 @@
-#signup-component {
+#secure-warning-component {
     background-color: #208baa;
 }
 
-#signup-component > div {
+#secure-warning-component > div {
 	display: flex;
     flex-direction: column;
 }
 
-#signup-component > div > .text-content {
+#secure-warning-component > div > .text-content {
     color: #ffffff;
     font-size: 1.3em;
     text-align: center;
@@ -16,7 +16,7 @@
     align-items: center;
 }
 
-#signup-component .espm-home-logo {
+#secure-warning-component .espm-home-logo {
     flex: 2 1 auto;
     text-align: center;
     display: flex;
@@ -24,13 +24,13 @@
     align-items: flex-end;
 }
 
-#signup-component img {
+#secure-warning-component img {
 	max-width: 200px;
     max-height: 167px;
     height: 100%;
 }
 
-#signup-component .wrap-buttons {
+#secure-warning-component .wrap-buttons {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -38,7 +38,7 @@
     flex: 2 1 auto;
 }
 
-#signup-component button {
+#secure-warning-component button {
 	width: 75%;
 	font-size: 1.1em;
 	font-weight: 500;
