--- a/src/components/layout/secure-warning/secure-warning.component.html
+++ b/src/components/layout/secure-warning/secure-warning.component.html
@@ -1,6 +1,6 @@
 <ion-view>
     <ion-nav-title>ES na Palma da Mão</ion-nav-title>
-    <ion-content id="signup-component" class="md-padding">
+    <ion-content id="secure-warning-component" class="md-padding">
         <div class="espm-home-logo">
             <img src="img/logo-es.png" alt="">
         </div>
