--- a/src/components/ceturb/bus-info/bus-info.component.html
+++ b/src/components/ceturb/bus-info/bus-info.component.html
@@ -1,9 +1,7 @@
 <ion-view>
 	<ion-nav-title class="bus-info-title">Linha {{::vm.route.line.number}}</ion-nav-title>
 	<ion-nav-buttons side="left">
-		<a ng-click="$transitionService.goBack()" class="button back-button buttons button-clear header-item nav-back-btn">
-			<i class="ion-android-arrow-back"></i>
-		</a>
+		<back-button></back-button>
 	</ion-nav-buttons>
 
 	<ion-nav-buttons side="right">
