--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -2,9 +2,7 @@
 	<!--left button on navigation bar-->
 	<ion-nav-bar class="md-primary-color-bg">
 		<ion-nav-buttons side="left">
-			<a ng-click="$transitionService.goBack()" class="button back-button buttons button-clear header-item nav-back-btn">
-				<i class="ion-android-arrow-back"></i>
-			</a>
+			<back-button></back-button>
 		</ion-nav-buttons>
 		<!--end left button on navigation bar-->
 	</ion-nav-bar>
