--- a/src/components/layout/menu/menu.component.html
+++ b/src/components/layout/menu/menu.component.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="true">
 	<ion-side-menu-content>
-		<ion-nav-bar class="material-background-nav-bar">
+		<ion-nav-bar class="material-background-nav-bar capitalize">
 			<ion-nav-buttons side="left">
 				<a class="button button-icon button-clear ion-navicon" menu-toggle="left" ng-click="vm.toggleLeft()"></a>
 			</ion-nav-buttons>
