fix(calendar): Alinha número no botão que seleciona dia corrente
Alinha número no botão que seleciona dia corrente

#225

--- a/src/components/calendar/calendar.component.css
+++ b/src/components/calendar/calendar.component.css
@@ -3,6 +3,7 @@
     font-size: 11px;
     position: absolute;
     top: 7px;
-    left: 14px;
     font-weight: bold;
+    left: 30%;
+    width: 12px
 }
