refactor(geral): Substitui promises por async/await em operações assíncronas
- Substitui promises por async/await em operações assíncronas onde a troca
acarreta simplificação.
- Refatora sistema de autenticação

--- a/src/components/sep/sep-consulta.component.html
+++ b/src/components/sep/sep-consulta.component.html
@@ -120,7 +120,7 @@
 		<error-message error="uiState.error">
 			<remark ng-if="!uiState.error.handled">Não foi possível consultar o SEP</remark>
 			<div ng-if="uiState.error.status === 404">
-				<highlight>"{{::vm.lastProcessNumber}}"</highlight>
+				<highlight>"{{vm.lastProcessNumber}}"</highlight>
 				<remark>Verifique o número informado</remark>
 			</div>
 		</error-message>
