--- a/src/components/detran/driver-license-status/driver-license-status.component.html
+++ b/src/components/detran/driver-license-status/driver-license-status.component.html
@@ -50,11 +50,11 @@
 				</md-card-header-text>
 			</md-card-header>
 		</md-card>
-		<md-list ng-if="vm.tickets && vm.hasTickets">
+		<md-list ng-if="vm.driverTickets && vm.hasTickets">
 			<md-subheader class="md-no-sticky">
-				{{::vm.tickets.length}} multas encontradas
+				{{::vm.driverTickets.length}} multas encontradas
 			</md-subheader>
-			<md-list-item class="md-3-line ticket" ng-repeat="ticket in vm.tickets track by $index">
+			<md-list-item class="md-3-line ticket" ng-repeat="ticket in vm.driverTickets track by $index">
 				<div class="md-list-item-text md-padding" layout="row">
 					<div flex="20" flex-gt-xs="15">
 						<div class="avatar-points bg-{{::vm.getTicketLevelColor( ticket.classification ) }}">{{::ticket.points}}</div>
@@ -71,7 +71,7 @@
 				<md-divider></md-divider>
 			</md-list-item>
 		</md-list>
-		<message text="Nenhuma multa para a CNH" icon="fa fa-check-circle-o" ng-if="vm.tickets && !vm.hasTickets" class="no-tickets">
+		<message text="Nenhuma multa para a CNH" icon="fa fa-check-circle-o" ng-if="vm.driverTickets && !vm.hasTickets" class="no-tickets">
 		</message>
 		<error-message error="uiState.error">
 			<remark ng-if="uiState.error.status === 404">Verifique se os dados da CNH estão corretos</remark>
