--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -28,7 +28,7 @@
 
 			<a href="" ng-click="vm.openUrlForgotPassword()" class="espm-forgot-password">Esqueceu a Senha?</a>
 
-			<md-button ng-click="vm.loginWithCredentials(vm.username, vm.password)" ng-disabled="vm.processingLogin" class="espm-login-button md-raised"
+			<md-button ng-click="vm.login(vm.username, vm.password)" ng-disabled="vm.processingLogin" class="espm-login-button md-raised"
 				md-colors="::{color: 'primary'}" md-no-ink="isAndroid">ENTRAR
 			</md-button>
 		</form>
