fix(calendar): Remove evento swipe-left do ion-content

--- a/src/components/dashboard/dashboard.component.html
+++ b/src/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <ion-view title="Dashboard">
-	<ion-content id="dashboard-component" class="espm-has-tabs-top" on-swipe-left="vm.navigateToTab('app.dashboard.calendar', 'left')">
+	<ion-content id="dashboard-component" class="espm-has-tabs-top">
 		<ion-tabs class="tabs-text-top espm-tabs-color-active-material">
 			<ion-tab title="DESTAQUES"
 					 class="md-primary-color-bg"
@@ -14,4 +14,4 @@
 			</ion-tab>
 		</ion-tabs>
 	</ion-content>
-</ion-view>
+</ion-view> 
