refactor(geral): Centraliza lógica de exibição de shadow no header

--- a/src/components/app/app.component.css
+++ b/src/components/app/app.component.css
@@ -88,7 +88,7 @@ md-input-container input[type=tel], md-input-container input[type=number] {
 }
 
 /* Tabs */
-.espm-header-tabs {
+.espm-header-no-shadow ion-header-bar {
     box-shadow: none !important;
 }
 
