chore(TEMP): Menu sem hammer não funcional

--- a/src/components/layout/menu/menu.component.html
+++ b/src/components/layout/menu/menu.component.html
@@ -7,5 +7,5 @@
 		</ion-nav-bar>
 		<ion-nav-view name="content"></ion-nav-view>
 	</ion-side-menu-content>
-	<div id="nlDrawer"></div>
+	<drawer-component></drawer-component>
 </ion-side-menus>
