fix(generators): corrige geração de nomes
normaliza geração de nomes de arquivos para dash-case e nomes de controllers e componentes para

pascal-case

--- a/generator/component/temp.component.html
+++ b/generator/component/temp.component.html
@@ -1,6 +1,6 @@
 <ion-view>
-    <ion-nav-title><%= upCaseName %></ion-nav-title>
-    <ion-content id="<%= name %>">
+    <ion-nav-title><%= className %></ion-nav-title>
+    <ion-content id="<%= fileName %>">
         {{$ctrl.name}}
     </ion-content>
 </ion-view>
