--- a/src/app/secont/transparency/budget-deviation/budget-deviation-item/budget-deviation-item.component.scss
+++ b/src/app/secont/transparency/budget-deviation/budget-deviation-item/budget-deviation-item.component.scss
@@ -1,35 +1,35 @@
-.bdi {
-    display: flex;
-    -webkit-box-pack: start;
-    justify-content: flex-start;
-    -webkit-box-align: center;
-    align-items: center;
+budget-deviation-item {
+    padding: 10px;
+    .bdi-content {
+        display: flex;
+        -webkit-box-pack: start;
+        justify-content: flex-start;
+        -webkit-box-align: center;
+        align-items: center;
+
+        > div {
+            color: rgba(115, 114, 114, 0.87);
+            flex: 1;
+            box-sizing: border-box;
+            flex-direction: column;
+            display: flex;
+        }
+
+        .bdi-item-label {
+            margin: 5px 0;
+            color: #333;
+        }
+
+        .bdi-value {
+            color: #c86673;
+        }
+
+        .bdi-percentage {
+            flex: 0;
+            font-weight: bold;
+            font-size: 2em;
+            color: #c86673;
+            margin-left: 8px;
+        }
+    }
 }
-
-.bdi > div  {
-   color: rgba(115, 114, 114, 0.87);
-}
-
-.bdi > div {
-     flex: 1;
-     box-sizing: border-box;
-     flex-direction: column;
-     display: flex;
-}
-
-.bdi .bdi-item-label {
-     margin: 5px 0;
-     color: #333;
- }
-
-.bdi .bdi-value {
-      color: #c86673;
- }
-
-.bdi .bdi-percentage {
-     flex: 0;
-     font-weight: bold;
-     font-size: 2em;
-     color: #c86673;
-     margin-left: 8px;
- }
