--- a/src/app/secont/transparency/public-works-by-city/public-works-by-city.component.html
+++ b/src/app/secont/transparency/public-works-by-city/public-works-by-city.component.html
@@ -1,12 +1,12 @@
 <ion-view>
-    <ion-nav-title>
+	<ion-nav-title>
 		Obras por Município <span class="fs-15" ng-if="vm.filter.year">({{vm.filter.year}})</span>
 	</ion-nav-title>
 	<ion-nav-buttons side="left">
 		<back-button></back-button>
 	</ion-nav-buttons>
 	<ion-nav-buttons side="right">
-		<md-button class="md-icon-button" ng-if="vm.budgetDeviation.items.length" ng-click="vm.showChart = !vm.showChart">
+		<md-button class="md-icon-button" ng-if="vm.items.length" ng-click="vm.showChart = !vm.showChart">
 			<md-icon md-font-icon="fa fa-pie-chart">
 			</md-icon>
 		</md-button>
@@ -16,8 +16,8 @@
 		</md-button>
 	</ion-nav-buttons>
 	<spinner ng-if="uiState.loading"></spinner>
-    <ion-content>
-         <div id="public-works-by-city" ng-if="vm.items" class="districts-report">
+	<ion-content>
+		<div id="public-works-by-city" ng-if="vm.items">
 			<!-- componenu subheader-->
 			<report-title title="vm.filter.description()" info="vm.info"></report-title>
 
@@ -29,18 +29,8 @@
 				<report-list-summary on-sort-click="vm.sort = $locals.sort">
 					<span class="total accent">{{vm.total | currency}}</span> ({{vm.quantity}} obras)
 				</report-list-summary>
-				<report-list-item ng-repeat="item in vm.items track by $index"
-							  	  ng-style="{'border-left': (vm.showChart ? 20 : 0) +  'px solid {{item.color}}'}">
-					<div class="r-item-details">
-						<h3 class="r-item-label capitalize">{{item.label}} <span class="q-obras">({{item.quantity}} obras)</span></h3>
-						<p class="r-item-value">{{item.value | currency}}</p>
-					</div>
-					<div class="r-item-percentage" ng-if="item.percentage < 1">
-						&lt;1%
-					</div>
-					<div class="r-item-percentage" ng-if="item.percentage >= 1">
-						{{item.percentage}}%
-					</div>
+				<report-list-item ng-repeat="item in vm.items track by $index">
+					<default-item item="item" show-legend="vm.showChart"></default-item>
 				</report-list-item>
 			</report-list>
 
@@ -52,5 +42,5 @@
 			<year-filter on-change="vm.doFilter(filter)"></year-filter>
 		</modal>
 		<error-message error="uiState.error"></error-message>
-    </ion-content>
+	</ion-content>
 </ion-view>
