--- a/src/app/secont/transparency/shared/report-list/report-list-item/report-list-item.component.scss
+++ b/src/app/secont/transparency/shared/report-list/report-list-item/report-list-item.component.scss
@@ -1,11 +1,15 @@
 
-.r-item {
-    padding: 0 16px;
-    height: auto;
-    min-height: 72px;
+report-list-item md-list-item{
+    &.md-no-proxy.r-item, 
+    &.md-no-style.r-item {
+        padding: 0;
+        align-content: stretch;
+        height: auto;
+        min-height: 72px;
+    }
+
+    & > * {
+        flex:1;
+    }
 }
-.r-item > * {
-    flex: 1;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
+
