refactor(transparency): renomeia componente 'public-works-city' para 'public-works-cities'

--- a/src/app/secont/transparency/public-works-by-cities/public-works-by-cities.component.html
+++ b/src/app/secont/transparency/public-works-by-cities/public-works-by-cities.component.html
@@ -17,7 +17,7 @@
 	</ion-nav-buttons>
 	<spinner ng-if="uiState.loading"></spinner>
 	<ion-content>
-		<div id="public-works-by-city" ng-if="vm.items">
+		<div id="public-works-by-cities" ng-if="vm.items">
 			<!-- componenu subheader-->
 			<report-title title="vm.filter.description()" info="vm.info"></report-title>
 
