--- a/src/app/secont/transparency/shared/default-item/default-item.component.html
+++ b/src/app/secont/transparency/shared/default-item/default-item.component.html
@@ -1,6 +1,6 @@
 <div class="default-item-content" 
-        ng-style="{'border-left-color': $ctrl.item.color}"
-        ng-class="{labeled: $ctrl.showLegend}">
+     ng-style="{'border-left-color': $ctrl.item.color}"
+     ng-class="{legended: $ctrl.showLegend}">
     <div class="r-item-details">
         <h3 class="r-item-label capitalize">{{$ctrl.item.label}}</h3>
         <p class="r-item-value">{{$ctrl.item.value | currency}}</p>
