--- a/src/app/layout/date-range-filter/date-range-filter.component.html
+++ b/src/app/layout/date-range-filter/date-range-filter.component.html
@@ -2,17 +2,17 @@
     <div class="date-range-filter-header">Selecione o período a ser consultado</div>
     <label class="item item-input">
             <span class="date-range-filter-label">De:</span>
-            <input class="date-range-filter-date" type="month" ng-model="vm.from" flex>
+            <input class="date-range-filter-date" type="month" ng-model="vm.filter.from" flex>
             <md-button class="md-icon-button date-range-filter-caret">
                 <md-icon md-font-icon="fa fa-caret-down"></md-icon>
             </md-button>
     </label>
     <label class="item item-input">
             <span class="date-range-filter-label">Até:</span>
-            <input class="date-range-filter-date" type="month" ng-model="vm.to" flex>
+            <input class="date-range-filter-date" type="month" ng-model="vm.filter.to" flex>
             <md-button class="md-icon-button date-range-filter-caret">
                 <md-icon md-font-icon="fa fa-caret-down"></md-icon>
             </md-button>
     </label>
-    <md-button class="md-raised md-accent" ng-click="vm.selectFilter(vm.from,vm.to)">Consultar</md-button>
+    <md-button class="md-raised md-accent" ng-click="vm.selectFilter(vm.filter)">Consultar</md-button>
 </div>
