refactor(transparency): configura valores iniciais dos filtros

--- a/src/app/secont/transparency/budget-deviation/budget-deviation.component.html
+++ b/src/app/secont/transparency/budget-deviation/budget-deviation.component.html
@@ -40,7 +40,7 @@
 		</div>
 
 		<modal show="vm.showFilter" title="Orçado x Executado">
-			<year-filter on-change="vm.doFilter(filter)"></year-filter>
+			<year-filter on-change="vm.doFilter(filter)" value="vm.filter"></year-filter>
 		</modal>
 		<error-message error="uiState.error"></error-message>
 	</ion-content>
