--- a/src/app/secont/transparency/public-works/public-works.component.html
+++ b/src/app/secont/transparency/public-works/public-works.component.html
@@ -39,7 +39,7 @@
 		</div>
 
 		<modal show="vm.showFilter" title="Obras Públicas">
-			<year-filter on-change="vm.doFilter(filter)"></year-filter>
+			<year-filter on-change="vm.doFilter(filter)" value="vm.filter"></year-filter>
 		</modal>
 		<error-message error="uiState.error"></error-message>
 	</ion-content>
