--- a/src/app/secont/transparency/expenses-by-area/expenses-by-area.component.html
+++ b/src/app/secont/transparency/expenses-by-area/expenses-by-area.component.html
@@ -22,7 +22,7 @@
 				show-info="vm.showInfo"></money-flow-report>
 
 		<modal show="vm.showFilter" title="Despesas(Áreas)">
-			<date-range-filter on-change="vm.doFilter(filter)"></date-range-filter>
+			<date-range-filter on-change="vm.doFilter(filter)" value="vm.filter"></date-range-filter>
 		</modal>
 		<error-message error="uiState.error"></error-message>
 	</ion-content>
