--- a/src/app/secont/transparency/revenues/revenues.component.html
+++ b/src/app/secont/transparency/revenues/revenues.component.html
@@ -23,7 +23,7 @@
 				show-chart="vm.showChart" 
 				show-info="vm.showInfo"></money-flow-report>
 		<modal show="vm.showFilter" title="Arrecadações">
-			<date-range-filter on-change="vm.doFilter(filter)"></date-range-filter>
+			<date-range-filter on-change="vm.doFilter(filter)" value="vm.filter"></date-range-filter>
 		</modal>
 		<error-message error="uiState.error"></error-message>
 	</ion-content>
