refactor(transparency): ajusta texto do about

--- a/src/app/secont/transparency/about/about.component.html
+++ b/src/app/secont/transparency/about/about.component.html
@@ -20,14 +20,12 @@
                 </md-card-title-text>
             </md-card-title>
             <md-card-content>
-                <p>O Portal da Transparência é uma iniciativa do Governo do Estado do Espírito Santo para divulgar dados e informações
-                    da gestão governamental, possibilitando que a sociedade participe e acompanhe a aplicação dos recursos
-                    públicos. </p>
-                <p>O objetivo é dar maior transparência aos atos administrativos e contribuir para o aumento do controle social,
-                    da gestão democrática na Administração Pública estadual e do combate à corrupção. </p>
-                <p>No Portal, as consultas estão disponíveis aos usuários tanto em formato de tabelas como de gráficos, em linguagem
-                    simples, com navegação amigável, podendo as informações ser assimiladas por qualquer pessoa, independente
-                    de familiaridade com o sistema financeiro-orçamentário brasileiro. </p>
+                <p>O Portal da Transparência é um instrumento criado para demonstrar os dados públicos do Governo do Estado
+                    do Espírito Santo. Tem como finalidade entregar à sociedade o conhecimento necessário para o controle
+                    das ações de governo. Este aplicativo traz de forma mais resumida algumas consultas presentes no Portal
+                    da Transparência.
+                </p> 
+                <p>Para informações mais detalhadas acesse  <a href="www.transparencia.es.gov.br">www.transparencia.es.gov.br</a>.</p>
             </md-card-content>
         </md-card>
 
