refactor(transparency): ajusta título das páginas

--- a/src/app/secont/transparency/expenses-by-origin/expenses-by-origin.component.html
+++ b/src/app/secont/transparency/expenses-by-origin/expenses-by-origin.component.html
@@ -1,6 +1,6 @@
 <ion-view>
 	<ion-nav-title>
-		Despesas(Órgãos)
+		Despesas por Órgão
 	</ion-nav-title>
 	<ion-nav-buttons side="left">
 		<back-button></back-button>
