--- a/src/app/secont/transparency/budget-deviation/budget-deviation.component.html
+++ b/src/app/secont/transparency/budget-deviation/budget-deviation.component.html
@@ -1,6 +1,6 @@
 <ion-view>
 	<ion-nav-title>
-		Orçado x Executado <span class="fs-15" ng-if="vm.filter.year">({{vm.filter.year}})</span>
+		Orçado x Executado
 	</ion-nav-title>
 	<ion-nav-buttons side="left">
 		<back-button></back-button>
