--- a/src/app/secont/transparency/budgets/budgets.component.html
+++ b/src/app/secont/transparency/budgets/budgets.component.html
@@ -1,6 +1,6 @@
 <ion-view>
 	<ion-nav-title>
-		Orçamento <span class="fs-15" ng-if="vm.filter.year">({{vm.filter.year}})</span>
+		Orçamento
 	</ion-nav-title>
 	<ion-nav-buttons side="left">
 		<back-button></back-button>
