--- a/src/app/secont/transparency/expenses-by-area/expenses-by-area.component.html
+++ b/src/app/secont/transparency/expenses-by-area/expenses-by-area.component.html
@@ -1,6 +1,6 @@
 <ion-view>
 	<ion-nav-title>
-		Despesas(Áreas)
+		Despesas por Área
 	</ion-nav-title>
 	<ion-nav-buttons side="left">
 		<back-button></back-button>
