--- a/src/app/secont/transparency/public-works-by-city/public-works-by-city.component.html
+++ b/src/app/secont/transparency/public-works-by-city/public-works-by-city.component.html
@@ -1,6 +1,6 @@
 <ion-view>
     <ion-nav-title>
-		{{vm.city}} <span class="fs-15" ng-if="vm.filter">({{vm.filter.year}})</span>
+		{{vm.city}}
 	</ion-nav-title>
 	<ion-nav-buttons side="left">
 		<back-button></back-button>
