--- a/src/app/secont/transparency/revenues/revenues.component.html
+++ b/src/app/secont/transparency/revenues/revenues.component.html
@@ -1,6 +1,6 @@
 <ion-view>
 	<ion-nav-title>
-		Arrecadações
+		Receitas
 	</ion-nav-title>
 	<ion-nav-buttons side="left">
 		<back-button></back-button>
