refactor(transparency): ajusta labels e campos exibidos em public-works-detail

--- a/src/app/secont/transparency/public-works-detail/public-works-detail.component.html
+++ b/src/app/secont/transparency/public-works-detail/public-works-detail.component.html
@@ -15,7 +15,7 @@
             <div class="public-works-detail__items public-works-detail__items--is-{{vm.detail.status}}">
                 <div class="row">
                     <div class="col col-50">
-                        <div class="public-works-detail__item-label">Custo</div>
+                        <div class="public-works-detail__item-label">Valor Total</div>
                         <div class="public-works-detail__item-description public-works-detail__item-description--is-value">{{vm.detail.value | currency}}</div>
                     </div>
                     <div class="coll col-50">
@@ -35,12 +35,12 @@
                 </div>
                 <div class="row">
                     <div class="col col-50">
-                        <div class="public-works-detail__item-label">Data</div>
+                        <div class="public-works-detail__item-label">Data Contratação</div>
                         <div class="public-works-detail__item-description public-works-detail__item-description--is-date">{{vm.detail.date}}</div>
                     </div>
                     <div class="col col-50">
-                        <div class="public-works-detail__item-label">Tipo</div>
-                        <div class="public-works-detail__item-description">{{vm.detail.type}}</div>
+                        <div class="public-works-detail__item-label">Prazo</div>
+                        <div class="public-works-detail__item-description">{{vm.detail.estimate}}</div>
                     </div>
                 </div>
                 <div class="row">
