feat(transparency): adiciona ícone para items clicáveis

--- a/src/app/secont/transparency/budget-deviation/budget-deviation-item/budget-deviation-item.component.scss
+++ b/src/app/secont/transparency/budget-deviation/budget-deviation-item/budget-deviation-item.component.scss
@@ -1,5 +1,5 @@
 budget-deviation-item {
-    padding: 10px;
+    padding: 10px 10px 10px 15px;
     .bdi-content {
         display: flex;
         -webkit-box-pack: start;
