--- a/src/app/secont/transparency/public-works-by-city/public-works-by-city-item/public-works-by-city-item.component.html
+++ b/src/app/secont/transparency/public-works-by-city/public-works-by-city-item/public-works-by-city-item.component.html
@@ -6,4 +6,5 @@
         <div class="public-work-value">{{$ctrl.item.value | currency}}</div>
         <public-works-status status="$ctrl.item.status"></public-works-status>
     </div>
+    <div class="public-work__btn-detail"></div>
 </div>
