--- a/src/app/secont/transparency/shared/report-list/report-list-summary/report-list-summary.component.scss
+++ b/src/app/secont/transparency/shared/report-list/report-list-summary/report-list-summary.component.scss
@@ -11,6 +11,7 @@ report-list-summary {
     .rls-content {
         flex:1;
         font-size: 1em;
+        color: #c86673;
     }
 
     .rls .md-subheader-inner {
